test_suite/alan-2022-examples/failing/003450_mutation.alan
source wV4 begin if 38 then relax elsif 5 put "?u\"" relax end end
